Make graph fill screen, change to light yellow theme to be distinct

--- a/brain/mapping/templates/mapping/base.html
+++ b/brain/mapping/templates/mapping/base.html
@@ -5,7 +5,11 @@
 svg a {
     cursor: pointer;
 }
+.graph svg {
+    width: 100%;
+    height: 70vh;
+}
 </style>
 {% endblock %}
-{% block body_class %}skin-purple{% endblock %}
+{% block body_class %}skin-yellow-light{% endblock %}
 {% block title %}Brain{% endblock %}
