--- a/brain/mapping/templates/mapping/workspace_detail.html
+++ b/brain/mapping/templates/mapping/workspace_detail.html
@@ -8,7 +8,8 @@
 
 {% block page_actions %}
     {% if request.user.is_authenticated %}
-    <a class="btn btn-success btn-xs" href="{% url 'add-item' object.pk %}"><i class="fa fa-plus"></i> Add Item</a>
-    <a class="btn btn-danger btn-xs" href="{% url 'delete-workspace' object.pk %}"><i class="fa fa-trash"></i> Delete</a>
+    <a class="btn btn-success btn-xs" href="{% url 'add-item' object.slug %}"><i class="fa fa-plus"></i> Add Item</a>
+    <a class="btn btn-success btn-xs" href="{% url 'add-dependency' object.slug %}"><i class="fa fa-plus"></i> Add Relationship</a>
+    <a class="btn btn-danger btn-xs" href="{% url 'delete-workspace' object.slug %}"><i class="fa fa-trash"></i> Delete</a>
     {% endif %}
 {% endblock %}
