Fix broken dependency creation

--- a/brain/mapping/templates/mapping/dependency_form.html
+++ b/brain/mapping/templates/mapping/dependency_form.html
@@ -14,3 +14,11 @@
     <input class="btn btn-primary" type="submit" value="{% if object.pk %}Save{% else %}Create{% endif %}" />
 </form>
 {% endblock %}
+
+{% block page_actions %}
+        <a class="btn btn-primary btn-xs" href="{% url 'workspace-detail' workspace %}">Back to workspace</a>
+        {% if object.pk %}
+            <a class="btn btn-danger btn-xs" href="{% url 'delete-dependency' workspace object.pk %}">Delete
+        </a>
+        {% endif %}
+{% endblock %}
