--- a/brain/mapping/templates/mapping/workspace_form.html
+++ b/brain/mapping/templates/mapping/workspace_form.html
@@ -2,9 +2,16 @@
 {% block page_name %}Create New Workspace{% endblock %}
 
 {% block content %}
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input class="btn btn-primary" type="submit" value="Create" />
-</form>
+<div class="row">
+    <div class="col-sm-4">
+        <div class="box">
+            <div class="box-body">
+                <form action="" method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input class="btn btn-primary" type="submit" value="{% if object.pk %}Save{% else %}Create{% endif %}" />
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
