Allow graph to grow unbounded but scroll

--- a/brain/mapping/templates/mapping/base.html
+++ b/brain/mapping/templates/mapping/base.html
@@ -5,9 +5,8 @@
 svg a {
     cursor: pointer;
 }
-.graph svg {
-    width: 100%;
-    height: 70vh;
+.graph {
+    overflow: scroll;
 }
 </style>
 {% endblock %}
