--- a/brain/mapping/templates/mapping/workspace_list.html
+++ b/brain/mapping/templates/mapping/workspace_list.html
@@ -8,7 +8,7 @@
                 <table class="table table-bordered table-hover">
                     <thead>
                         <tr>
-                            <th>View Name</th>
+                            <th>Name</th>
                             <th>Owner</th>
                         </tr>
                     </thead>
