Rename from MindMap to SystemMap

--- a/brain/mapping/templates/adminlte/lib/_main_header.html
+++ b/brain/mapping/templates/adminlte/lib/_main_header.html
@@ -1,6 +1,6 @@
 {% extends "adminlte/lib/_main_header.html" %}
-{% block logo_text %}<b>Mind</b>Map{% endblock %}
-{% block logo_text_small %}<b>M</b>M{% endblock %}
+{% block logo_text %}<b>System</b>Map{% endblock %}
+{% block logo_text_small %}<b>S</b>M{% endblock %}
 
 {% block header_dropdowns %}
 {% if request.user.is_authenticated %}
