--- a/brain/mapping/templates/adminlte/login.html
+++ b/brain/mapping/templates/adminlte/login.html
@@ -1,3 +1,3 @@
 {% extends "adminlte/login.html" %}
-{% block logo_text %}<b>Mind</b>Map{% endblock %}
+{% block logo_text %}<b>System</b>Map{% endblock %}
 {% block login_form_links %}{% endblock %}
